# ckanext-datastore-refresh

./: .coveragerc  .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: tests.yml
ckanext/datastore_refresh/: actions.py  auth.py  choices.py  cli.py  frequency_options.json  helpers.py  model.py  plugin.py  schema.py  validation.py  view.py
ckanext/datastore_refresh/assets/: script.js  webassets.yml
ckanext/datastore_refresh/logic/: action.py  auth.py  schema.py
ckanext/datastore_refresh/migration/datastore_refresh/: alembic.ini
ckanext/datastore_refresh/migration/datastore_refresh/versions/: 101_49ea96a793f8_add_new_table_with_relationship.py  638b9fafad7d_rename_table_refresh_dataset_datastore_.py
ckanext/datastore_refresh/migration/refresh_dataset_datastore/: alembic.ini
ckanext/datastore_refresh/model/: __init__.py  base.py  dataset_refresh.py  refresh_dataset_datastore.py
ckanext/datastore_refresh/templates/admin/: datastore_refresh.html  edit_datastore_refresh_frequency.html
ckanext/datastore_refresh/tests/: conftest.py  test_actions.py  test_model.py  test_plugin.py
ckanext/datastore_refresh/tests/logic/: test_auth.py
ckanext/datastore_refresh/tests/model/: test_dataset_refresh.py
ckanext/datavic_admin/: actions.py  cli.py  model.py  plugin.py  view.py
ckanext/datavic_admin/assets/: webassets.yml
ckanext/datavic_admin/migration/refresh_dataset_datastore/versions/: 101_49ea96a793f8_add_new_table_with_relationship.py
ckanext/datavic_admin/templates/admin/: datastore_refresh.html
