[metadata]
name = ckanext-datastore-refresh
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salsadigitalauorg/ckanext-datastore-refresh
author = Konstantin Sivakov
author_email = konstantin.sivakov@salsadigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10

keywords = CKAN

[options]
python_requires = >=3.7
packages = find:
namespace_packages = ckanext
install_requires =
                 typing-extensions
                 ckanext-toolbelt~=0.2.3
include_package_data = True

[options.entry_points]
ckan.plugins =
             datastore_refresh = ckanext.datastore_refresh.plugin:DatastoreRefreshPlugin
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datastore_refresh/i18n/ckanext-datastore_refresh.pot
width = 80

[init_catalog]
domain = ckanext-datastore_refresh
input_file = ckanext/datastore_refresh/i18n/ckanext-datastore_refresh.pot
output_dir = ckanext/datastore_refresh/i18n

[update_catalog]
domain = ckanext-datastore_refresh
input_file = ckanext/datastore_refresh/i18n/ckanext-datastore_refresh.pot
output_dir = ckanext/datastore_refresh/i18n
previous = true

[compile_catalog]
domain = ckanext-datastore_refresh
directory = ckanext/datastore_refresh/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
